style.css
body {
    font-family: 'Roboto', sans-serif;
}

.header, .footer {
    display: flex;
    background-color: #1F2937;
    color: #F9FAF8;
    padding: 12px;
}

.header {
    justify-content: space-between;
    align-items: center;
}

.header-nav {
    display: flex;
    gap: 12px;
}

.header-logo {
    font-weight: bold;
    font-size: 24px;
}

.header ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.header a {
    color: inherit;
    text-decoration: none;
}

.footer {
    justify-content: center;
    font-size: 12px;
    font-weight: lighter;
}

.content {
    padding: 36px;
    min-height: 40vh;
}

.content.hero{
    background-color: #1F2937;
    color: #F9FAF8;
    display: flex;
    flex: 0 1 auto;
    justify-content: space-around;
}

.hero-title{
    font-size: 48px;
    font-weight: 900;
    margin: 20px 0;
}

.hero-subtitle, .information-cards .info-caption{
    font-size: 18px;
}

.hero-subtitle {
    color: #E5E7EB;
    margin: 20px 0;
}

.hero-img{
    width: 35vh;
    min-width: 35vh;
    margin: 20px;
}

.sign-up-cta{
    background-color: #3882F6;
    text-decoration: none;
    color: #F9FAF8;
    padding: 12px;
    margin: 20px 0;
}

.information-title{
    font-weight: 900px;
    font-size: 36px;
    color: #1F2937;
    text-align: center;
    margin: 20px 0;
}

.information-cards ul {
    list-style-type: none;
    display: flex;
    justify-content: center;
    gap: 16px;
}

.information-cards .info-icon {
    width: 100px;
    height: 100px;
    border: 3px solid #3882F6;
}

.content.quote{
    background-color: #E5E7EB;
}

.quote-text, .quote-customer{
    margin: 20px 15vh;
}

.quote-text{
    font-size: 36px;
    font-weight: light;
    color: #1F2937;
}

.quote-customer{
    text-align: right;
}

